<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telas.CalculadoraNotasMain">

    <EditText
        android:id="@+id/nota1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:inputType="number"
        android:hint="@string/nota1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nota2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/nota2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/nota1"
        app:layout_constraintStart_toStartOf="@+id/nota1"
        app:layout_constraintTop_toBottomOf="@+id/nota1" />

    <EditText
        android:id="@+id/faltas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/faltas"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/nota2"
        app:layout_constraintStart_toStartOf="@+id/nota2"
        app:layout_constraintTop_toBottomOf="@+id/nota2" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="@+id/faltas"
        app:layout_constraintStart_toStartOf="@+id/faltas"
        app:layout_constraintTop_toBottomOf="@+id/faltas" />

    <TextView
        android:id="@+id/resultado"
        style="@style/style_text_view"
        app:layout_constraintEnd_toEndOf="@+id/calcular"
        app:layout_constraintStart_toStartOf="@+id/calcular"
        app:layout_constraintTop_toBottomOf="@+id/calcular" />

    <TextView
        android:id="@+id/nota_final"
        style="@style/style_text_view"
        app:layout_constraintEnd_toEndOf="@+id/resultado"
        app:layout_constraintStart_toStartOf="@+id/resultado"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <TextView
        android:id="@+id/numero_faltas"
        style="@style/style_text_view"
        app:layout_constraintEnd_toEndOf="@+id/nota_final"
        app:layout_constraintStart_toStartOf="@+id/nota_final"
        app:layout_constraintTop_toBottomOf="@+id/nota_final" />

    <Button
        android:id="@+id/limpar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/limpar"
        app:layout_constraintEnd_toEndOf="@+id/numero_faltas"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/numero_faltas"
        app:layout_constraintTop_toBottomOf="@+id/numero_faltas" />

</androidx.constraintlayout.widget.ConstraintLayout>