<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telas.ViewModelLifecycleMain">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/contador"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/tv_contador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/text_view"
        app:layout_constraintStart_toStartOf="@+id/text_view"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/btn_dados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dados"
        app:layout_constraintEnd_toEndOf="@+id/tv_contador"
        app:layout_constraintStart_toStartOf="@+id/tv_contador"
        app:layout_constraintTop_toBottomOf="@+id/tv_contador" />

    <Button
        android:id="@+id/btn_mostrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="@+id/btn_dados"
        app:layout_constraintStart_toStartOf="@+id/btn_dados"
        app:layout_constraintTop_toBottomOf="@+id/btn_dados" />
</androidx.constraintlayout.widget.ConstraintLayout>